[Upd] dynamic form

--- a/projects/login-form/src/lib/forms/pwd-form/pwd-form.component.html
+++ b/projects/login-form/src/lib/forms/pwd-form/pwd-form.component.html
@@ -1,105 +1,1 @@
-<!-- NOTE: <form autocomplete="off"> will turn off autocomplete for the form in most browsers
-     except for username/email/password fields -->
-<form (ngSubmit)="send()" [formGroup]="formGroup" autocomplete="off">
-
-  <!-- NOTE: fake fields are a workaround for chrome/opera autofill getting the wrong fields -->
-  <input id="username" style="display:none" type="text" name="fakeusernameremembered">
-  <input id="password" style="display:none" type="password" name="fakepasswordremembered">
-
-  <div class="row w-100 no-gutters" *ngIf="!isFirst">
-    <div class="col">
-      <mat-form-field class="w-100">
-        <!-- NOTE: <input autocomplete="nope"> turns off autocomplete on many other browsers that don't respect
-          the form's "off", but not for "password" inputs. -->
-        <input matInput formControlName="verifCode" 
-          name="verif-code" autocomplete="nope" 
-          placeholder="{{ labels.input.verifCode }}" 
-          pattern="\\d{6}" 
-          type="text"/> <!-- NOTE: Pattern matches any non-whitespace character -->
-        <button *ngIf="formGroup.controls.verifCode.valid && inputs.clearCodeOnPwdForm" 
-          mat-button matSuffix mat-icon-button aria-label="Clear" 
-          color="primary" (click)="formGroup.controls.verifCode.setValue('')" 
-          type="button">
-          <mat-icon>close</mat-icon>
-        </button>
-        <!-- NOTE: Error messages -->
-        <mat-hint align="start" *ngIf="formGroup.controls.verifCode.errors?.required && errors.pwd">
-          {{ labels.policy.required }}
-        </mat-hint>
-        <mat-hint align="start" *ngIf="formGroup.controls.verifCode.errors?.pattern && errors.pwd">
-          {{ labels.policy.sixDigits }}
-        </mat-hint>
-      </mat-form-field>
-    </div>
-  </div>
-  <!-- NOTE: <input type="password" autocomplete="new-password" will turn it off for passwords everywhere -->
-  <!-- TODO: Repeat the username ? -->
-  <div class="row w-100 no-gutters">
-    <div class="col">
-      <mat-form-field class="w-100">
-        <input matInput formControlName="newPassword" 
-          name="new-password" autocomplete="new-password" 
-          placeholder="{{ labels.input.newPassword }}" 
-          type="{{ showPassword ? 'text' : 'password' }}"/>
-        <button *ngIf="inputs.showPwdOnPwdForm" 
-          mat-button matSuffix mat-icon-button aria-label="Clear" 
-          color="primary" (click)="showPassword=!showPassword" 
-          type="button">
-          <mat-icon>{{ showPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-        </button>
-        <!-- NOTE: Error message -->
-        <mat-hint align="start" *ngIf="formGroup.controls.newPassword.errors?.required && errors.pwd">
-          {{ labels.policy.required }}
-        </mat-hint>
-      </mat-form-field>
-    </div>
-  </div>
-  <div class="row w-100 no-gutters">
-    <div class="col">
-      <ul class="list-unstyled small">
-        <li class="check-policy">
-          <mat-icon class="red-policy" *ngIf="formGroup.controls.newPassword.errors && formGroup.controls.newPassword.errors.longEnough">close</mat-icon>
-          <mat-icon class="green-policy" *ngIf="!formGroup.controls.newPassword.errors || !formGroup.controls.newPassword.errors.longEnough">check</mat-icon>
-          {{ labels.policy.pwdLengthReplaced }}
-        </li>
-        <li class="check-policy" *ngIf="pwdPolicies.upper">
-          <mat-icon class="red-policy" *ngIf="formGroup.controls.newPassword.errors && formGroup.controls.newPassword.errors.upper">close</mat-icon>
-          <mat-icon class="green-policy" *ngIf="!formGroup.controls.newPassword.errors || !formGroup.controls.newPassword.errors.upper">check</mat-icon>
-          {{ labels.policy.pwdUppercase }}
-        </li>
-        <li class="check-policy" *ngIf="pwdPolicies.lower">
-          <mat-icon class="red-policy" *ngIf="formGroup.controls.newPassword.errors && formGroup.controls.newPassword.errors.lower">close</mat-icon>
-          <mat-icon class="green-policy" *ngIf="!formGroup.controls.newPassword.errors || !formGroup.controls.newPassword.errors.lower">check</mat-icon>
-          {{ labels.policy.pwdLowercase }}
-        </li>
-        <li class="check-policy" *ngIf="pwdPolicies.number">
-          <mat-icon class="red-policy" *ngIf="formGroup.controls.newPassword.errors && formGroup.controls.newPassword.errors.number">close</mat-icon>
-          <mat-icon class="green-policy" *ngIf="!formGroup.controls.newPassword.errors || !formGroup.controls.newPassword.errors.number">check</mat-icon>
-          {{ labels.policy.pwdNumber }}
-        </li>
-        <li class="check-policy" *ngIf="pwdPolicies.char">
-          <mat-icon class="red-policy" *ngIf="formGroup.controls.newPassword.errors && formGroup.controls.newPassword.errors.char">close</mat-icon>
-          <mat-icon class="green-policy" *ngIf="!formGroup.controls.newPassword.errors || !formGroup.controls.newPassword.errors.char">check</mat-icon>
-          {{ labels.policy.pwdSpecial }}
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!-- TODO: Enable Google Captcha -->
-  <!-- <div class="row w-100 no-gutters">
-    <div class="col">
-      <re-captcha site_key="6LdBtAkUAAAAAB2_l_TOz7oZmTLXaFjP1cxnu4yM"
-        (captchaResponse)="handleCorrectCaptcha($event)">
-      </re-captcha>
-    </div>
-  </div> -->
-  <div class="pt-0 pb-4 px-4">
-    <div class="row w-100 no-gutters">
-      <div class="col text-right">
-        <button color="primary" mat-raised-button class="small text-uppercase" type="submit" [disabled]="!formGroup.valid">
-          {{ labels.button.send }}
-        </button>
-      </div>
-    </div>
-  </div>
-</form>
+<cal-dynamic-builder [fields]="pwdFields" [params]="pwdParams" [properties]="formProperties" (onSubmit)="send($event)"></cal-dynamic-builder>
