--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,12 +44,12 @@
   [fixedWidth]="settings.fixedWidth" 
   [googleStyle]="settings.googleStyle" 
   [googleTheme]="settings.googleTheme" 
-  [customFormLayouts]="layouts" 
+  [customLayouts]="layouts" 
   [customUsrPolicy]="settings.usrPolicy" 
   [customPwdPolicies]="pwdPolicies" 
   [customIcons]="icons" 
   [customButtons]="buttons" 
-  [customInputs]="inputs" 
+  [customActions]="actions" 
   [customErrors]="errors" 
   [customLabels]="labels" 
   (initialized)="initialized()" 
