--- a/projects/login-form/src/lib/forms/mfa-setup-form/mfa-setup-form.component.html
+++ b/projects/login-form/src/lib/forms/mfa-setup-form/mfa-setup-form.component.html
@@ -2,31 +2,4 @@
   <qrcode [qrdata]="qrCode" [size]="100" [level]="'L'"></qrcode>
   <p class="my-3">{{ code }}</p>
 </div>
-<form (ngSubmit)="send()" [formGroup]="formGroup" autocomplete="off">
-  <mat-form-field class="w-100">
-    <input matInput formControlName="verifCode" 
-      name="verifCode" placeholder="{{ labels.input.verifCode }}" 
-      pattern="\\d{6}" 
-      type="text"/> <!-- NOTE: Pattern matches 6 digits -->
-    <button *ngIf="formGroup.controls.verifCode.valid && inputs.clearCodeOnMfaForm" 
-      mat-button matSuffix mat-icon-button aria-label="Clear" 
-      color="primary" (click)="formGroup.controls.verifCode.setValue('')" 
-      type="button">
-      <mat-icon>close</mat-icon>
-    </button>
-    <!-- NOTE: Error messages -->
-    <mat-hint align="start" *ngIf="formGroup.controls.verifCode.errors?.required && errors.mfa">
-      {{ labels.policy.required }}
-    </mat-hint>
-    <mat-hint align="start" *ngIf="formGroup.controls.verifCode.errors?.pattern && errors.mfa">
-      {{ labels.policy.sixDigits }}
-    </mat-hint>
-  </mat-form-field>
-  <div class="row w-100 no-gutters">
-    <div class="col text-right">
-      <button color="primary" mat-raised-button class="small text-uppercase" type="submit" [disabled]="!formGroup.valid">
-        {{ labels.button.save }}
-      </button>
-    </div>
-  </div>
-</form>
+<cal-dynamic-builder [fields]="mfaSetupFields" [params]="mfaSetupParams" [properties]="formProperties" (onSubmit)="send($event)"></cal-dynamic-builder>
