[Upd] aws pwd policy [Add] hide pwd policy while login form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,7 @@
   [fixedWidth]="settings.fixedWidth" 
   [googleStyle]="settings.googleStyle" 
   [googleTheme]="settings.googleTheme" 
+  [hidePwdPolicyOnLogin]="settings.hidePwdPolicyOnLogin" 
   [customLayouts]="layouts" 
   [customUsrPolicy]="settings.usrPolicy" 
   [customPwdPolicies]="pwdPolicies" 
