--- a/projects/login-form/src/lib/login-form.component.html
+++ b/projects/login-form/src/lib/login-form.component.html
@@ -15,13 +15,15 @@
       <div class="row no-gutters mb-3" *ngIf="googleStyle">
         <div class="col text-right" *ngIf="buttons.signUp">
           <!-- NOTE: Sign up -->
-          <button mat-button (click)="onClickSignUp()" type="button" color="primary" class="small text-uppercase mr-2">
+          <button mat-button (click)="onClickSignUp()" type="button" 
+            [ngClass]="classes.signUp ? classes.signUp : 'mat-primary small text-uppercase mr-2'">
             {{ labels.button.signUp }}
           </button>
         </div>
-        <div class="col {{ buttons.signUp ? 'text-left' : 'text-center'}}">
+        <div class="col {{ buttons.signUp ? 'text-left' : 'text-center' }}">
           <!-- NOTE: Sign in -->
-          <button mat-raised-button (click)="onClickNextStep(0)" type="button" color="primary" class="small text-uppercase ml-2">
+          <button mat-button (click)="onClickNextStep(0)" type="button" 
+            [ngClass]="classes.signIn ? classes.signIn : 'mat-raised-button mat-primary small text-uppercase ml-2'">
             {{ labels.button.signIn }}
           </button>
         </div>
@@ -32,7 +34,8 @@
           <div class="col text-center">
             <!-- NOTE: Google -->
             <div class="d-block mb-3" *ngIf="buttons.google">
-              <button mat-flat-button type="button" class="mat-raised-button cal-btn google {{ theme }}" (click)="onClickLoginSocial('google')">
+              <button mat-button type="button" (click)="onClickLoginSocial('google')" 
+                class="cal-btn google {{ theme }} {{ classes.google ? classes.google : 'mat-raised-button' }}">
                 <span class="cal-bg-icon">
                   <span class="cal-temp-icon"></span>
                   <!-- <mat-icon class="align-middle cal-icon" svgIcon="google"></mat-icon> -->
@@ -42,7 +45,8 @@
             </div>
             <!-- NOTE: Facebook -->
             <div class="d-block mb-3" *ngIf="buttons.facebook">
-              <button mat-flat-button type="button" class="cal-btn facebook" (click)="onClickLoginSocial('facebook')">
+              <button mat-button type="button" (click)="onClickLoginSocial('facebook')" 
+                class="cal-btn facebook {{ classes.facebook ? classes.facebook : 'mat-raised-button' }}">
                 <span class="cal-bg-icon">
                   <span class="cal-temp-icon"></span>
                   <!-- <mat-icon class="align-middle cal-icon" svgIcon="facebook"></mat-icon> -->
@@ -71,9 +75,10 @@
       <!-- NOTE: Back button -->
       <div class="row no-gutters mb-3">
         <div class="col">
-          <a href="#" (click)="onClickPrevStep(1)" title="{{ labels.button.back }}">
-            <mat-icon class="align-bottom mr-2">keyboard_arrow_left</mat-icon>{{ labels.button.back }}
-          </a>
+          <button mat-button type="button" [ngClass]="classes.backStep ? classes.backStep : ''" (click)="onClickPrevStep(1)" title="{{ labels.button.back }}">
+            <mat-icon class="align-middle mr-2">keyboard_arrow_left</mat-icon>
+            <span class="align-middle">{{ labels.button.back }}</span>
+          </button>
         </div>
       </div>
       <!-- NOTE: (Google style) Username step -->
@@ -89,9 +94,10 @@
       <!-- NOTE: Back button -->
       <div class="row no-gutters mb-3">
         <div class="col">
-          <a href="#" (click)="onClickPrevStep(2)" title="{{ labels.button.back }}">
-            <mat-icon class="align-bottom mr-2">keyboard_arrow_left</mat-icon>{{ labels.button.back }}
-          </a>
+          <button mat-button type="button" [ngClass]="classes.backStep ? classes.backStep : ''" (click)="onClickPrevStep(2)" title="{{ labels.button.back }}">
+            <mat-icon class="align-middle mr-2">keyboard_arrow_left</mat-icon>
+            <span class="align-middle">{{ labels.button.back }}</span>
+          </button>
         </div>
       </div>
       <!-- TODO: User info -->
@@ -115,6 +121,7 @@
         [errors]="errors" 
         [labels]="labels" 
         [actions]="actions" 
+        [classes]="classes" 
         (sendCloseTab)="onClickCloseTab($event)" 
         (relayFirstPwd)="tabFirstPwd($event)" 
         (relayLostPwd)="tabLostPwd($event)" 
