--- a/projects/login-form/src/lib/layouts/tab-wrapper/tab-wrapper.component.html
+++ b/projects/login-form/src/lib/layouts/tab-wrapper/tab-wrapper.component.html
@@ -1,7 +1,8 @@
 <div class="header py-2 px-4 mb-3">
   <div class="row align-items-center">
     <div class="col-2 px-0 text-left">
-      <button mat-icon-button (click)="backToLogin()">
+      <button mat-button (click)="backToLogin()" 
+        [ngClass]="classes.closeTag ? classes.closeTag : 'mat-icon-button mat-primary'">
         <mat-icon>arrow_back</mat-icon>
       </button>
     </div>
@@ -48,6 +49,7 @@
   [labels]="labels" 
   [actions]="actions" 
   [errors]="errors" 
+  [classes]="classes" 
   (firstConnection)="relayFirstPwdEvent($event)" 
   (lostPassword)="relayLostPwdEvent($event)">
 </cal-pwd-form>
@@ -58,6 +60,7 @@
   [labels]="labels" 
   [actions]="actions" 
   [errors]="errors" 
+  [classes]="classes" 
   (saveMfa)="relaySaveMfaKeyEvent($event)">
 </cal-mfa-setup-form>
 <!-- NOTE: MFA Form -->
@@ -65,5 +68,6 @@
   [labels]="labels" 
   [actions]="actions" 
   [errors]="errors" 
+  [classes]="classes" 
   (sendMfa)="relaySendMfaCodeEvent($event)">
 </cal-mfa-form>
