[Upd] simplify application example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,7 +59,7 @@
   (loginSocial)="loginSocial($event)" 
   (forgotPwd)="forgotPassword($event)" 
   (sendFirstPwd)="firstPassword($event)" 
-  (sendResetPwd)="lostPassword($event)" 
+  (sendResetPwd)="resetPassword($event)" 
   (saveMfaKey)="saveMfaKey($event)" 
   (sendMfaCode)="sendMfaCode($event)" 
   (stepUsr)="stepUsr($event)" 
