--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+// @import '~bootstrap/scss/functions.scss';
+// @import '~bootstrap/scss/variables.scss';
+// @import '~bootstrap/scss/mixins.scss';
 @import '../../node_modules/bootstrap/scss/functions.scss';
 @import '../../node_modules/bootstrap/scss/variables.scss';
 @import '../../node_modules/bootstrap/scss/mixins.scss';
